# japanese-mini-gpt

./: .gitignore  AGENTS.md  README.md  pyproject.toml  tickets.md
experiments/: generation_quality_summary.md  results.md
manifests/: aozora_works.json
mini_transformer/: __init__.py  char_tokenizer.py  language_dataset.py  model.py  sentencepiece_tokenizer.py
scripts/: generate.py  generate_huggingface.py  inspect_char_tokenizer.py  inspect_lm_batches.py  inspect_model_forward.py  prepare_aozora.py  train.py  train_huggingface.py  train_sentencepiece_tokenizer.py
