[project]
name = "mini-transformer"
version = "0.1.0"
description = "Small GPT-style Japanese literature text generation project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "sentencepiece>=0.2.1",
    "torch>=2.12.1",
    "wandb>=0.28.0",
]
